# stdexec

./: CMakeLists.txt  all.hpp
examples/: hello_coro.cpp  retry.cpp  scope.cpp  unifex.cpp
examples/algorithms/: retry.hpp  then.hpp
examples/nvexec/maxwell/: snr.cuh
include/: all.hpp  execution.hpp
include/exec/: async_scope.hpp  create.hpp  env.hpp  inline_scheduler.hpp  scope.hpp  static_thread_pool.hpp
include/exec/__detail/: __sender_facade.hpp
include/nvexec/stream/: bulk.cuh  ensure_started.cuh  let_xxx.cuh  reduce.cuh  schedule_from.cuh  split.cuh  then.cuh  transfer.cuh  upon_error.cuh  upon_stopped.cuh
include/stdexec/: execution.hpp
include/stdexec/__detail/: __meta.hpp  __p2300.hpp
test/: CMakeLists.txt
test/algos/adaptors/: test_split.cpp
test/exec/: CMakeLists.txt  test_create.cpp
test/exec/async_scope/: test_spawn.cpp  test_spawn_future.cpp  test_start_now.cpp
test/nvexec/: common.cuh
test/rrd/: async_scope.cpp  split.cpp
test/stdexec/algos/adaptors/: test_bulk.cpp  test_ensure_started.cpp  test_let_error.cpp  test_let_value.cpp  test_on.cpp  test_schedule_from.cpp  test_split.cpp  test_split3.cpp  test_then.cpp  test_transfer.cpp  test_when_all.cpp
test/stdexec/algos/consumers/: test_start_detached.cpp  test_sync_wait.cpp
test/stdexec/algos/factories/: test_transfer_just.cpp
test/stdexec/concepts/: test_awaitables.cpp  test_concept_scheduler.cpp  test_concepts_sender.cpp
test/stdexec/cpos/: cpo_helpers.cuh  test_cpo_connect.cpp  test_cpo_ensure_started.cpp  test_cpo_schedule.cpp  test_cpo_split.cpp
test/test_common/: schedulers.hpp  senders.hpp  type_helpers.hpp
